# qiuqien_hw1

./: CMakeLists.txt  CMakeLists1.txt  README.md
build1/: Makefile
build1/.cmake/api/v1/reply/: index-2024-05-20T15-16-56-0493.json
src/: algebra.c
嵌入式作业1/src/: main.cpp
嵌入式作业2/src/: main.cpp
嵌入式作业3/src/: main.cpp
